@@ -1,3 +1,15 @@
+2010-11-10  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* vc-clearcase.el (clearcase-known-vobs)
+	(clearcase-view-info-for-path-cache): new variables
+	(clearcase-view-info-for-path, clearcase-view-tag-for-path)
+	(clearcase-vob-tag-for-path, clearcase-view-root-for-path): new
+	functions
+	(clearcase-setup-vprop): use `clearcase-view-root-for-path'
+	(vc-clearcase-responsible-p): we are responsible for a file if we
+	can find a vob tag for it (fixes Bug #8)
+	(vc-clearcase-root): use `clearcase-view-root-for-path'
+
 2010-10-26  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* ucm.el (ucm-actb-visit-item-command): open the file using the
